Content added to tabs in main page

--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<div class="container" style="max-width: none;width:100%">
-  <div class="header">
+<div>
+  <div class="header" style="margin-bottom: 1px;">
     <img src="images/logo.png"/>
     <img style="margin-left: -30px;" src="images/CUPN.png"/>
 
@@ -38,9 +38,9 @@
           Plataformas <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" role="menu">
-          <li><a href="http://23.253.224.36/moodle/login/index.php" target="_blank">Moodle</a></li>
+          <li><a href="http://centrouniversitariopasodelnorte.com/moodle/login/index.php" target="_blank">Plataforma Virtual Educativa</a></li>
           <li class="divider"></li>
-          <li><a href="http://centrouniversitariopasodelnorte.com/bibliotecas/cgi-bin/library.cgi" target="_blank">Libreria Virtual</a></li>
+          <li><a href="http://centrouniversitariopasodelnorte.com/bibliotecas/cgi-bin/library.cgi" target="_blank">Biblioteca Virtual</a></li>
         </ul>
       </li>
       <li ng-class="{active:isActive('/about')}" ><a  ng-href="#/about">Acerca de</a></li>
