--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/slick.js/slick/slick.css" />
-  <link rel="stylesheet" href="bower_components/flexnav/css/flexnav.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -27,9 +26,10 @@
 <!-- Add your site or application content here -->
 <div>
   <div class="header" style="margin-bottom: 1px;">
+    <div style="min-width: 355px;">
     <img src="images/logo.png"/>
     <img style="margin-left: -30px;" src="images/CUPN.png"/>
-
+    </div>	
 
     <ul class="nav nav-pills pull-right" ng-controller="NavigationCtrl">
       <li ng-class="{active:isActive('/')}"><a ng-href="#/">Inicio</a></li>
@@ -76,7 +76,6 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/slick.js/slick/slick.min.js"></script>
-<script src="bower_components/flexnav/js/jquery.flexnav.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
