-About content from presentation done. -Contact content from presentation done. -Toolbar fixed. -Tab active with color.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 <!-- Add your site or application content here -->
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:white;">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -48,7 +48,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-mainToolbar">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" style="margin-top: 53px;">
       
       <li ng-class="{active:isActive('/')}"><a ng-href="#/">Inicio</a></li>
       
@@ -76,7 +76,7 @@
   <div style="clear: both" ng-view=""></div>
 
   <div class="footer">
-    <p class="pull-right">Powered by InspiraCode</p>
+    <a href="mailto:developers@inspiracode.net" class="pull-right" style="color: #777;margin-right:10px;">Powered by InspiraCode</a>
   </div>
 
 
