-Some visual improvements.

--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,10 @@
         <span class="icon-bar"></span>
       </button>
       
-      <span style="min-width:130px;">
+      <div style="min-width:365px;display:block-inline;">
 	    <img src="images/logo.png" style="width: 135px;"/>
 	    <img src="images/CUPN.png"/>  
-      </span>
+      </div>
     
     </div>
 
