Update Programas de estudios

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,7 @@
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <!-- build:css(.) styles/vendor.css -->
 <!-- bower:css -->
-<link rel="stylesheet"
-	href="bower_components/bootstrap/dist/css/bootstrap.css" />
+<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
 <link rel="stylesheet" href="bower_components/slick.js/slick/slick.css" />
 <!-- endbower -->
 <!-- endbuild -->
@@ -69,6 +68,12 @@
 								href="http://centrouniversitariopasodelnorte.com/bibliotecas/cgi-bin/library.cgi"
 								target="_blank"> <img src="images/library-icon.png">
 									Biblioteca Virtual
+							</a></li>
+							<li class="divider"></li>
+							<li><a ng-click="go('');"
+								href="http://centrouniversitariopasodelnorte.com/mail"
+								target="_blank"> <img src="images/Mail-icon.png">
+									Correo Electrónico
 							</a></li>
 						</ul></li>
 					<li ng-class="{active:isActive('/about')}"><a
