--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,6 @@
 </p>
 <![endif]-->
     <!-- Add your site or application content here -->
-    <div class="container" style="max-width: none;">
         <img src="images/logo-ico.png" style="width: 100px; display: block; position: absolute; top: 10px; left: 110px; z-index: 1031;" />
         <img src="images/CUPN.png" style="display: block; position: absolute; top: 31px; left: 194px; z-index: 1031;" />
         <nav class="navbar navbar-default" style="min-height: 104px; border-radius:0;">
@@ -40,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbar-collapse-mainToolbar">
                     <div class="hidden-xs hidden-sm" style="width:100px;height:54px;"></div>
                     <ul class="nav navbar-nav navbar-right">
-                        <li ng-class="{active:isActive('/')}"><a href="" ng-click="go('/');">Inicio</a></li>
+                        <li ng-class="{active:isActive('/')}"><a href="" ng-click="go('/');"><b>Inicio</b></a></li>
                         <li role="presentation" class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" data-target="#" role="button" aria-expanded="false"> Plataformas <span
                                 class="caret"></span>
                         </a>
@@ -69,7 +68,6 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-    </div>
     <div style="clear: both" ng-view=""></div>
     <div class="footer">
         <a href="mailto:developers@inspiracode.net" class="pull-right" style="color: #777; margin-right: 10px;">Powered by InspiraCode</a>
