--- a/app/index.html
+++ b/app/index.html
@@ -25,9 +25,9 @@
 </p>
 <![endif]-->
     <!-- Add your site or application content here -->
-        <img src="images/logo-ico.png" style="width: 100px; display: block; position: absolute; top: 10px; left: 110px; z-index: 1031;" />
-        <img src="images/CUPN.png" style="display: block; position: absolute; top: 31px; left: 194px; z-index: 1031;" />
-        <nav class="navbar navbar-default" style="min-height: 104px; border-radius:0;">
+        <img src="images/logo-ico.png" style="width: 100px; display: block; position: absolute; top: 10px; left: 0; z-index: 1031;" />
+        <img src="images/CUPN.png" style="display: block; position: absolute; top: 31px; left: 84px; z-index: 1031;" />
+        <nav class="navbar navbar-default" style="min-height: 104px; border-radius:0; margin-bottom: 0;">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header" style="min-height: 104px;">
